--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,6 +2,7 @@
 
 
 <form method="post" action="/register">
+    <h2 class="text-center">Register</h1>
   <div class="form-group">
     <label for="name">Name</label>
     <input class="form-control" type="text" name="name" id="name" placeholder="Name">
