modified:   views/admin/admin.handlebars 	modified:   views/complaint.handlebars 	modified:   views/junior/junior.handlebars 	modified:   views/login.handlebars 	modified:   views/register.handlebars

--- a/views/admin/admin.handlebars
+++ b/views/admin/admin.handlebars
@@ -3,7 +3,7 @@
 <br>
 <br>
 
-<table class="table table-bordered">
+<table class="table table-bordered setBgForForm font-weight-bold">
   <thead class="table-success">
     <tr>
       <th scope="col">ID</th>
@@ -25,7 +25,7 @@
   </tbody>
 </table>
 
-<div class="container mt-5 border p-5" style="width:70%">
+<div class="container mt-5 border p-5 setBgForForm shadow-sm mb-5 rounded" style="width:70%">
     <h2> Assign the Complaint to Technician</h2>
     <br>
     <form method="post" action="/assign">
