--- a/views/complaint.handlebars
+++ b/views/complaint.handlebars
@@ -1,6 +1,6 @@
-<form method="post" action="/registerComplaint" class="shadow-sm p-3 mb-5 rounded">
+<form method="post" action="/registerComplaint" class="shadow-sm p-3 mb-5 rounded font-weight-bold">
 
-    <h2>Register a Complaint</h2>
+    <h2 class="text-center font-weight-bolder">Register a Complaint</h2>
     <div class="form-group">
         <label>Name</label>
         <input class="form-control" type="text" name="name" placeholder="Name" >
@@ -22,7 +22,7 @@
     <button class="btn btn-success mr-5" type="submit">Submit Complaint</button>
     </div>
     <div class="col-6">
-     Wanna change your mind? <a class="btn btn-warning btn-sm" href="/">Back</a>
+     Wanna change your mind? <a class="btn btn-info btn-sm" href="/">Back</a>
     </div>
  </div>
     {{!-- <br>
