--- a/views/junior/junior.handlebars
+++ b/views/junior/junior.handlebars
@@ -1,11 +1,11 @@
-Technician PAGE
+{{!-- Technician PAGE --}}
 {{!-- <h3>Hello {{user.name}} !!!</h3> --}}
-
-<hr>
-<h2>
+{{!-- <h2>Hello {{user.name}} </h2> --}}
+ 
+<h3>
     Dashboard
-</h2>
- <table class="table table-bordered">
+</h3>
+ <table class="table table-bordered setBgForForm shadow-sm p-3 mb-5 rounded font-weight-bold">
   <thead class="table-success">
     <tr>
       <th scope="col">ID</th>
