--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 
 
-<form method="post" action="/login" class="shadow-sm p-3 mb-5 rounded" >
+<form method="post" action="/login" class="shadow-sm mt-5 p-3 mb-5 rounded font-weight-bold" >
   <div class="form-group">
-     <h2 class="text-center">Login</h1>
+     <h2 class="text-center font-weight-bolder">Login</h1>
     <label>Username</label>
     <input class="form-control" type="text" name="username" placeholder="Username">
   </div>
@@ -13,5 +13,8 @@
   <button class="btn btn-success" type="submit">Login</button>
   <br>
   <br>
-  Don't Have An Account? <a class="btn btn-warning btn-sm" href="/register">Register</a>
+ <p>
+ Don't Have An Account?
+ </p> 
+ <a class="btn btn-info btn-sm" href="/register">Register</a>
 </form>
