--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -34,5 +34,5 @@
   <button class="btn btn-success" type="submit">Register</button>
   <br>
   <br>
-  Have An Account? <a class="btn btn-warning btn-sm" href="/login">Login Now</a>
+  Have An Account? <a class="btn btn-info btn-sm" href="/login">Login Now</a>
 </form>
