--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,15 +13,18 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 p-2 fixed-top">
+     
         <container class="mx-5 w-100">
+            
             <div class="d-flex flex-row justify-content-center">
+               
                 <div>
                     <a class="navbar-brand" href="#">
                         <img src="/assets/solution.png" height="50px" width="50px" />
                           <span class="ml-3 text-xl">Resolver</span>
                     </a>
                 </div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
                     aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -38,10 +41,10 @@
                                 <span class="sr-only">(current)</span></a>
                                 {{/if}}
                         </li>
-                        <li class="nav-item">
+                        {{!-- <li class="nav-item">
                             <a class="nav-link" href="/">Reports
                                 <span class="sr-only">(current)</span></a>
-                        </li>
+                        </li> --}}
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         {{#if user}}
