--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -17,18 +17,18 @@
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input class="form-control" type="text" name="password" id="password" placeholder="Password">
+    <input class="form-control" type="password" name="password" id="password" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="password2">Confirm Password</label>
-    <input class="form-control" type="text" name="password2" id="password2" placeholder="Confirm Password">
+    <input class="form-control" type="password" name="password2" id="password2" placeholder="Confirm Password">
   </div>
   <div class="form-group">
     <label for="role">Role</label>
     <select class="form-control" name="role" id="role">
         <option value="user">User</option>
-        <option value="jeng">Junior Engineer</option>
-        <option value="admin">Admin</option>
+        <option value="jeng">Technician</option>
+        <option value="admin">Supervisor</option>
     </select>
   </div>
   <button class="btn btn-success" type="submit">Register</button>
