modified:   models/complaint-mapping.js 	modified:   models/user.js 	modified:   routes/index.js 	modified:   views/index.handlebars 	modified:   views/layouts/main.handlebars 	modified:   views/register.handlebars 	renamed:    views/admin/admin.handlebars -> views/supervisor/supervisor.handlebars 	renamed:    views/junior/junior.handlebars -> views/technician/technician.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,4 +4,7 @@
 
 <br>
 <br>
+{{!-- {{#if user.role '==' 'user'}} --}}
 <a href="/complaint" class="btn btn-success btn-lg">Register a Complaint</a>
+
+{{!-- {{/if}} --}}
