--- a/views/supervisor/supervisor.handlebars
+++ b/views/supervisor/supervisor.handlebars
@@ -43,8 +43,8 @@
     </div>
     <div class="form-group">
         <label>Technician</label>
-        <select name="engineerName" id="engineerName" class="form-control">
-            {{#each engineer}}
+        <select name="technicianName" id="technicianName" class="form-control">
+            {{#each technician}}
                 <option value={{username}}> {{username}}   </option>
             {{/each}}
         </select>
