--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -27,8 +27,8 @@
     <label for="role">Role</label>
     <select class="form-control" name="role" id="role">
         <option value="user">User</option>
-        <option value="jeng">Technician</option>
-        <option value="admin">Supervisor</option>
+        <option value="technician">Technician</option>
+        <option value="supervisor">Supervisor</option>
     </select>
   </div>
   <button class="btn btn-success" type="submit">Register</button>
